--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="one">Number 1 - I'm a class!</p>
     <div id="id-one">Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
+    <p class="three">Number 3 - I'm a class, but cooler!</p>
     <div>Number 4 - I'm another ID.</div>
     <p class="one">Number 5 - I'm a class!</p>
   </body>
